--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -145,21 +145,22 @@ jobs:
 
       - name: Start Docker container
         run: |
-          uid=$(id -u)
-          gid=$(id -g)
           echo ${{ secrets.DOCKER_TOKEN }} | docker login ghcr.io -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+          # We start the container with the user ID of the parent GH action user to avoid permission issues on volume.
+          uid=$(id -u) # the GH action user ID
+          gid=1000     # the ue4 group in the docker container
+          user='gh'
+          set -x
           docker run -td \
             --name unreal \
             --volume ${{ github.workspace }}:/workspace \
             --workdir /workspace \
             --user $uid:$gid \
-            --env PATH='/home/ue4/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin' \
+            --env PATH="/home/$user/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin" \
             ghcr.io/epicgames/unreal-engine:dev-slim-${{ matrix.unreal }}
           docker logout ghcr.io
-          # Fixup UID and GID of the user in the container to match the GH action user
-          docker exec --user root unreal groupmod -g $gid ue4
-          # usermod spurriously fails on the first run on UE5 docker image
-          docker exec --user root unreal bash -c "usermod -u $uid -g $gid ue4 || usermod -u $uid -g $gid ue4"
+          # Add the user so it has a home directory (needed for the pip cache later on)
+          docker exec --user root unreal useradd -u $uid -g $gid --create-home $user
 
       - name: Setup UE CLI
         run: docker exec unreal bash -c '
