chore: update collected app build info

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -186,17 +186,16 @@ jobs:
 
       - name: Build sample app
         run: |
-          docker exec -w /workspace/checkout/test/SmokeTest unreal ue4 package
-          ls -alh checkout/test/SmokeTest/Saved/
+          docker exec -w /workspace/test/SmokeTest unreal ue4 package
 
       - name: Collect build info
         if: ${{ always() }}
         uses: actions/upload-artifact@v2
         with:
-          name: Sample app build info
-          path: checkout/test/SmokeTest
-          # path: |
-          #   checkout/test/SmokeTest/Saved/Logs
-          #   checkout/test/SmokeTest/Saved/Stats
-          #   checkout/test/SmokeTest/Saved/MaterialStats
-          #   checkout/test/SmokeTest/Saved/MaterialStatsDebug
+          name: UE ${{ matrix.unreal }} app build logs
+          path: |
+            /home/gh/Library/Logs/Unreal Engine/LocalBuildLogs
+            checkout/test/SmokeTest/Saved/Logs
+            checkout/test/SmokeTest/Saved/Stats
+            checkout/test/SmokeTest/Saved/MaterialStats
+            checkout/test/SmokeTest/Saved/MaterialStatsDebug
