--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -193,6 +193,7 @@ jobs:
       - name: Build sample app
         run: |
           docker exec -w /workspace/checkout/${{ matrix.app }} unreal ue4 package
+          docker exec -w /workspace/checkout/${{ matrix.app }} unreal cp -r '/home/gh/Library/Logs/Unreal Engine/LocalBuildLogs' Saved/Logs/
 
       - name: Collect build info
         if: ${{ always() }}
@@ -200,7 +201,6 @@ jobs:
         with:
           name: UE ${{ matrix.unreal }} app build logs
           path: |
-            '/home/gh/Library/Logs/Unreal Engine/LocalBuildLogs'
             checkout/${{ matrix.app }}/Saved/Logs
             checkout/${{ matrix.app }}/Saved/Stats
             checkout/${{ matrix.app }}/Saved/MaterialStats
