--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,13 +115,17 @@ jobs:
   test-ue-packaging:
     name: Test UE ${{ matrix.unreal }} packaging
     runs-on: ubuntu-latest
-    needs: [build, package-validation]
 
     strategy:
       fail-fast: false
       matrix:
         # Note: these versions must match scripts/packaging/engine-versions.txt
         unreal: ['4.27', '5.0'] # 4.26 is not available
+
+        # Unreal 5.0 takes ~1 hour to build the app so skip for now
+        include:
+          - unreal: '4.27'
+            app: sample
 
     steps:
       - name: Free disk space
@@ -147,33 +151,57 @@ jobs:
       - name: Start Docker container
         run: |
           echo ${{ secrets.DOCKER_TOKEN }} | docker login ghcr.io -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-          docker run -td --name unreal --user root \
-            -v ${{ github.workspace }}:/sentry-unreal \
-            --workdir /sentry-unreal \
+          # We start the container with the user ID of the parent GH action user to avoid permission issues on volume.
+          uid=$(id -u) # the GH action user ID
+          gid=1000     # the ue4 group in the docker container
+          user='gh'
+          set -x
+          docker run -td \
+            --name unreal \
+            --volume ${{ github.workspace }}:/workspace \
+            --workdir /workspace \
+            --user $uid:$gid \
+            --env PATH="/home/$user/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin" \
             ghcr.io/epicgames/unreal-engine:dev-slim-${{ matrix.unreal }}
+          docker logout ghcr.io
+          # Add the user so it has a home directory (needed for the pip cache later on)
+          docker exec --user root unreal useradd -u $uid -g $gid --create-home $user
+          # Chown some paths to the GH user to make UE5 work properly. We can't just chown the whole UnrealEngine or
+          # docker would implicitly have to copy it to the container and we would run out of space on the GH runner.
+          docker exec --user root unreal bash -c "
+            chown -R $uid /home/ue4/UnrealEngine/Engine/Binaries/ThirdParty/Mono/Linux ;
+            chown -R $uid /home/ue4/UnrealEngine/Engine/Programs/UnrealPak/Saved"
+
+      - name: Setup UE CLI
+        run: docker exec unreal bash -c '
+          pip3 install --upgrade pip ;
+          pip3 install -Iv ue4cli==0.0.54 ;
+          ue4 setroot /home/ue4/UnrealEngine '
 
       - name: Download packages
-        uses: actions/download-artifact@v2
+        uses: vaind/download-artifact@989a39a417730897d098ab11c34e49ac4e13ed70
         with:
           name: ${{ github.sha }}
+          wait-timeout: 600
 
-      - name: Unzip package from the build job
+      - uses: actions/checkout@v3
+        with:
+          path: checkout
+
+      - name: Build ${{ matrix.app }} app
+        if: ${{ matrix.app }}
         run: |
-          unzip sentry-unreal-*-engine${{ matrix.unreal }}.zip -d .
-          rm -f sentry-unreal-*.zip
+          unzip sentry-unreal-*-engine${{ matrix.unreal }}.zip -d checkout/${{ matrix.app }}/Plugins/sentry
+          docker exec -w /workspace/checkout/${{ matrix.app }} unreal ue4 package
+          docker exec -w /workspace/checkout/${{ matrix.app }} unreal cp -r '/home/gh/Library/Logs/Unreal Engine/LocalBuildLogs' Saved/Logs
 
-      - name: Install Linux Dependencies
-        run: |
-          docker exec unreal sudo apt-get update
-          docker exec unreal pip3 install --upgrade pip
-
-      - name: Install UE CLI
-        run:
-          docker exec unreal pip3 install ue4cli
-
-      - name: Configure UE CLI
-        run:
-          docker exec unreal ue4 setroot /home/ue4/UnrealEngine
-
-      - name: Package plugin
-        run: docker exec unreal ue4 package
+      - name: Collect build info
+        if: ${{ always() && matrix.app }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: UE ${{ matrix.unreal }} app build logs
+          path: |
+            checkout/${{ matrix.app }}/Saved/Logs
+            checkout/${{ matrix.app }}/Saved/Stats
+            checkout/${{ matrix.app }}/Saved/MaterialStats
+            checkout/${{ matrix.app }}/Saved/MaterialStatsDebug
