--- a/.craft.yml
+++ b/.craft.yml
@@ -11,4 +11,4 @@ targets:
     includeNames: /^sentry-unreal-.*.zip$/i
   - name: registry
     sdks:
-      github:sentry-unreal:
+      github:getsentry/sentry-unreal:
