chore: use shared danger workflow

--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -6,4 +6,4 @@ on:
 
 jobs:
   danger:
-    uses: getsentry/github-workflows/.github/workflows/danger.yml@3530284e77ea2ac65c1081402c66d04181f2e742
+    uses: getsentry/github-workflows/.github/workflows/danger.yml@v2
