--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -190,8 +190,11 @@ jobs:
       - name: TEST
         run: docker exec -w /workspace/checkout unreal chmod -R +x ${{ matrix.app }}
 
-      - name: Run tests
+      - name: CA TEST
         run: docker exec -w /workspace/checkout/${{ matrix.app }} unreal ue4 test --filter Product
+
+      - name: Run tests
+        run: docker exec -w /workspace/checkout/${{ matrix.app }} unreal export CURL_CA_BUNDLE=/etc/ssl/certs/ca-certificates.crt
 
       - name: Build & package ${{ matrix.app }}
         # Unreal 5.0 takes ~1 hour to build+package the app so only do it on v4.27
