--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -49,12 +49,18 @@ jobs:
           sudo apt-get update
           sudo apt-get install zlib1g-dev libcurl4-openssl-dev libssl-dev
 
+      - name: Setup Java 17 for Android
+        if: ${{ inputs.target == 'Android' }}
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 17
+
       - name: Build
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
           git submodule update --init --recursive ${{ steps.env.outputs.submodule }}
           mkdir -p '${{ steps.env.outputs.path }}'
-          export JAVA_HOME=$(JAVA_HOME_17_X64)
           ${{ steps.env.outputs.buildScript }} '${{ steps.env.outputs.submodule }}' '${{ steps.env.outputs.path }}'
 
       - uses: actions/upload-artifact@v3.1.1
