--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -46,7 +46,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install zlib1g-dev libcurl4-openssl-dev libssl-dev
 
-      uses: actions/setup-java@v3
+      - uses: actions/setup-java@v3
         if: ${{ inputs.target == 'Android' }}
         with:
           distribution: temurin
