--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -28,6 +28,9 @@ jobs:
           else
             submodule="modules/sentry-native"
           fi
+          echo "::set-output name=submodule::$submodule"
+          echo "::set-output name=path::plugin-dev/Source/ThirdParty/${{ inputs.target }}"
+          echo "::set-output name=buildScript::scripts/build-$(echo '${{ inputs.target }}' | tr '[:upper:]' '[:lower:]').sh"
 
       - name: Get submodule status
         run: git submodule status --cached ${{ steps.env.outputs.submodule }} | tee submodule-status
