--- a/sample/Config/DefaultEngine.ini
+++ b/sample/Config/DefaultEngine.ini
@@ -267,6 +267,7 @@ AutomaticBreadcrumbs=(bOnMapLoadingStarted=True,bOnMapLoaded=True,bOnGameStateCl
 UploadSymbolsAutomatically=False
 Release=
 PropertiesFilePath=Config/sentry.properties
+CrashReporterUrl="https://o447951.ingest.sentry.io/api/6253052/unreal/93c7a68867db43539980de54f09b139a/"
 
 [/Script/MacTargetPlatform.MacTargetSettings]
 SpatializationPlugin=Built-in Spatialization
