--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ plugin-dev/Source/ThirdParty/Win64
 plugin-dev/Source/ThirdParty/CLI/*
 !plugin-dev/Source/ThirdParty/.gitkeep
 !plugin-dev/Source/ThirdParty/CLI/.gitkeep
+
+# Sample
+sample/.sentry-native
