Switch Mac to use sentry-cocoa instead of sentry-native

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           if [[ "${{ inputs.target }}" == "Android" ]]; then
             submodule="modules/sentry-java"
-          elif [[ "${{ inputs.target }}" == "IOS" ]]; then
+          elif [[ "${{ inputs.target }}" == "IOS" || "${{ inputs.target }}" == "Mac" ]]; then
             submodule="modules/sentry-cocoa"
           else
             submodule="modules/sentry-native"
