added product id

--- a/plugin-dev/Sentry.uplugin
+++ b/plugin-dev/Sentry.uplugin
@@ -8,7 +8,7 @@
 	"CreatedBy": "Sentry",
 	"CreatedByURL": "https://sentry.io/",
 	"DocsURL": "https://docs.sentry.io/",
-	"MarketplaceURL": "",
+	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/99f5c02de5fa49ab97976a3a852e5408",
 	"SupportURL": "https://docs.sentry.io/support/",
 	"CanContainContent": false,
 	"IsBetaVersion": false,
