moved from 'many_linux' to running on 'ubuntu-20.04'

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,9 @@ jobs:
     uses: ./.github/workflows/sdk.yml
     with:
       target: Linux
-      runsOn: ubuntu-latest
+      # Build for an older GLIBC so that it can run with the old GLIBC included in EpicGames' Unreal docker images.
+      # See discussion in https://github.com/getsentry/sentry-unreal/pull/173
+      runsOn: ubuntu-20.04
 
   windows-sdk:
     uses: ./.github/workflows/sdk.yml
