Recreate demo project to UE 5.0

--- a/sample/Config/DefaultGame.ini
+++ b/sample/Config/DefaultGame.ini
@@ -1,11 +1,22 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=2F77D1EF624C7FE53C3E46A0AE066C2D
+ProjectID=43BDA2D249F2ED19D80A1AB1A40BBE80
+Homepage="https://sentry.io/"
+CompanyName=Sentry
+CompanyDistinguishedName=Sentry Inc.
+CopyrightNotice="// Copyright (c) 2023 Sentry. All Rights Reserved."
+ProjectName=SentryDemo
+Description=Demo project for Sentry UE plugin
+SupportContact="https://help.sentry.io/"
+PrivacyPolicy="https://sentry.io/privacy/"
+LicensingTerms="https://open.sentry.io/licensing/"
+ProjectDisplayedTitle=INVTEXT("SentryDemo")
+ProjectDebugTitleInfo=INVTEXT("SentryDemo")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Shipping
-ForDistribution=True
-IncludeCrashReporter=True
-IncludeDebugFiles=True
 FullRebuild=True
+ForDistribution=True
+IncludeDebugFiles=True
+IncludeCrashReporter=True
 
