--- a/sample/Config/DefaultEngine.ini
+++ b/sample/Config/DefaultEngine.ini
@@ -1,3 +1,5 @@
+
+
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/SentryDemo.SentryDemo
 LocalMapOptions=
@@ -19,19 +21,19 @@ AppliedTargetedHardwareClass=Mobile
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
-[/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/SentryPlayground")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/SentryPlayground")
-+ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="SentryPlaygroundGameModeBase")
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 
 [/Script/Engine.RendererSettings]
-r.Mobile.DisableVertexFog=True
+r.Mobile.DisableVertexFog=False
 r.Shadow.CSM.MaxMobileCascades=2
-r.MobileMSAA=1
+r.Mobile.AntiAliasing=1
+r.Mobile.FloatPrecisionMode=0
 r.Mobile.AllowDitheredLODTransition=False
-r.Mobile.AllowSoftwareOcclusion=False
 r.Mobile.VirtualTextures=False
+r.Mobile.ReflectionCaptureCompression=False
 r.DiscardUnusedQuality=False
+r.Shaders.CompressionFormat=2
 r.AllowOcclusionQueries=True
 r.MinScreenRadiusForLights=0.030000
 r.MinScreenRadiusForDepthPrepass=0.030000
@@ -40,28 +42,42 @@ r.PrecomputedVisibilityWarning=False
 r.TextureStreaming=True
 Compat.UseDXT5NormalMaps=False
 r.VirtualTextures=False
+r.VT.EnableAutoImport=True
 r.VirtualTexturedLightmaps=False
+r.VT.AnisotropicFiltering=False
 r.VT.TileSize=128
 r.VT.TileBorderSize=4
 r.vt.FeedbackFactor=16
-r.VT.EnableCompressZlib=True
-r.VT.EnableCompressCrunch=False
+WorkingColorSpaceChoice=sRGB
+RedChromaticityCoordinate=(X=0.640000,Y=0.330000)
+GreenChromaticityCoordinate=(X=0.300000,Y=0.600000)
+BlueChromaticityCoordinate=(X=0.150000,Y=0.060000)
+WhiteChromaticityCoordinate=(X=0.312700,Y=0.329000)
 r.ClearCoatNormal=False
+r.DynamicGlobalIlluminationMethod=1
+r.ReflectionMethod=1
 r.ReflectionCaptureResolution=128
-r.Mobile.ReflectionCaptureCompression=False
 r.ReflectionEnvironmentLightmapMixBasedOnRoughness=True
-r.ForwardShading=False
-r.VertexFoggingForOpaque=True
+r.Lumen.HardwareRayTracing=False
+r.Lumen.HardwareRayTracing.LightingMode=0
+r.Lumen.TraceMeshSDFs=1
+r.Shadow.Virtual.Enable=1
+r.RayTracing=False
+r.RayTracing.Shadows=False
+r.RayTracing.Skylight=False
+r.RayTracing.UseTextureLod=False
+r.PathTracing=True
+r.GenerateMeshDistanceFields=True
+r.DistanceFields.DefaultVoxelDensity=0.200000
 r.AllowStaticLighting=True
 r.NormalMapsForStaticLighting=False
-r.GenerateMeshDistanceFields=False
-r.DistanceFieldBuild.EightBit=False
-r.GenerateLandscapeGIData=False
-r.DistanceFieldBuild.Compress=False
-r.TessellationAdaptivePixelsPerTriangle=48.000000
+r.ForwardShading=False
+r.VertexFoggingForOpaque=True
 r.SeparateTranslucency=False
 r.TranslucentSortPolicy=0
 TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
+vr.VRS.HMDFixedFoveationLevel=0
+vr.VRS.HMDFixedFoveationDynamic=False
 r.CustomDepth=1
 r.CustomDepthTemporalAAJitter=True
 r.PostProcessing.PropagateAlpha=0
@@ -72,23 +88,22 @@ r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.AutoExposure.Method=0
 r.DefaultFeature.AutoExposure.Bias=1.000000
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=False
-r.UsePreExposure=True
-r.EyeAdaptation.EditorOnly=False
 r.DefaultFeature.MotionBlur=False
 r.DefaultFeature.LensFlare=False
-r.TemporalAA.Upsampling=False
-r.SSGI.Enable=False
-r.DefaultFeature.AntiAliasing=0
+r.TemporalAA.Upsampling=True
+r.AntiAliasingMethod=0
+r.MSAACount=4
 r.DefaultFeature.LightUnits=1
 r.DefaultBackBufferPixelFormat=4
 r.Shadow.UnbuiltPreviewInGame=True
 r.StencilForLODDither=False
 r.EarlyZPass=3
 r.EarlyZPassOnlyMaterialMasking=False
+r.Shadow.CSMCaching=False
 r.DBuffer=True
 r.ClearSceneMethod=1
-r.BasePassOutputsVelocity=False
-r.VertexDeformationOutputsVelocity=False
+r.VelocityOutputPass=0
+r.Velocity.EnableVertexDeformation=2
 r.SelectiveBasePassOutputs=False
 bDefaultParticleCutouts=False
 fx.GPUSimulationTextureSizeX=1024
@@ -105,180 +120,56 @@ vr.RoundRobinOcclusion=False
 vr.ODSCapture=False
 r.MeshStreaming=False
 r.WireframeCullThreshold=5.000000
-r.RayTracing=False
-r.RayTracing.UseTextureLod=False
 r.SupportStationarySkylight=True
 r.SupportLowQualityLightmaps=True
 r.SupportPointLightWholeSceneShadows=True
-r.SupportAtmosphericFog=True
 r.SupportSkyAtmosphere=True
-r.SupportSkyAtmosphereAffectsHeightFog=False
+r.SupportSkyAtmosphereAffectsHeightFog=True
+r.SupportCloudShadowOnForwardLitTranslucent=False
+r.Material.RoughDiffuse=False
+r.Material.EnergyConservation=False
 r.SkinCache.CompileShaders=False
 r.SkinCache.DefaultBehavior=1
 r.SkinCache.SceneMemoryLimitInMB=128.000000
 r.Mobile.EnableStaticAndCSMShadowReceivers=True
 r.Mobile.EnableMovableLightCSMShaderCulling=True
+r.Mobile.EnableNoPrecomputedLightingCSMShader=False
 r.Mobile.AllowDistanceFieldShadows=True
 r.Mobile.AllowMovableDirectionalLights=True
 r.MobileNumDynamicPointLights=4
-r.MobileDynamicPointLightsUseStaticBranch=True
 r.Mobile.EnableMovableSpotlights=False
 r.Mobile.EnableMovableSpotlightsShadow=False
 r.GPUSkin.Support16BitBoneIndex=False
 r.GPUSkin.Limit2BoneInfluences=False
 r.SupportDepthOnlyIndexBuffers=True
 r.SupportReversedIndexBuffers=True
-r.LightPropagationVolume=False
 r.Mobile.AmbientOcclusion=False
 r.GPUSkin.UnlimitedBoneInfluences=False
 r.GPUSkin.UnlimitedBoneInfluencesThreshold=8
+MaxSkinBones=(Default=65536,PerPlatform=(("Mobile", 256)))
 r.Mobile.PlanarReflectionMode=0
+r.Mobile.SupportsGen4TAA=True
 bStreamSkeletalMeshLODs=(Default=False,PerPlatform=())
 bDiscardSkeletalMeshOptionalLODs=(Default=False,PerPlatform=())
-VisualizeCalibrationColorMaterialPath=None
+VisualizeCalibrationColorMaterialPath=/Engine/EngineMaterials/PPM_DefaultCalibrationColor.PPM_DefaultCalibrationColor
 VisualizeCalibrationCustomMaterialPath=None
-VisualizeCalibrationGrayscaleMaterialPath=None
+VisualizeCalibrationGrayscaleMaterialPath=/Engine/EngineMaterials/PPM_DefaultCalibrationGrayscale.PPM_DefaultCalibrationGrayscale
+
+[/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
+CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
+
+[/Script/Engine.Engine]
++ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/SentryPlayground")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/SentryPlayground")
++ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="SentryPlaygroundGameModeBase")
 
 [/Script/Slate.SlateSettings]
 bExplicitCanvasChildZOrder=True
 
-[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-PackageName=io.sentry.unreal.sample
-StoreVersion=1
-StoreVersionOffsetArmV7=0
-StoreVersionOffsetArm64=0
-StoreVersionOffsetX8664=0
-ApplicationDisplayName=
-VersionDisplayName=1.0
-MinSDKVersion=23
-TargetSDKVersion=28
-InstallLocation=InternalOnly
-bEnableGradle=True
-bEnableLint=False
-bPackageDataInsideApk=True
-bCreateAllPlatformsInstall=False
-bDisableVerifyOBBOnStartUp=False
-bForceSmallOBBFiles=False
-bAllowLargeOBBFiles=False
-bAllowPatchOBBFile=False
-bAllowOverflowOBBFiles=False
-bUseExternalFilesDir=False
-bPublicLogFiles=True
-Orientation=Portrait
-MaxAspectRatio=2.100000
-bUseDisplayCutout=False
-bRestoreNotificationsOnReboot=False
-bFullScreen=True
-bEnableNewKeyboard=True
-DepthBufferPreference=Default
-bValidateTextureFormats=True
-bEnableBundle=False
-bEnableUniversalAPK=True
-bBundleABISplit=True
-bBundleLanguageSplit=True
-bBundleDensitySplit=True
-ExtraApplicationSettings=
-ExtraActivitySettings=
-bAndroidVoiceEnabled=False
-bRemoveOSIG=False
-+GoogleVRCaps=Daydream33
-bGoogleVRSustainedPerformance=False
-KeyStore=debug.keystore
-KeyAlias=androiddebugkey
-KeyStorePassword=android
-KeyPassword=android
-bBuildForArmV7=False
-bBuildForArm64=True
-bBuildForX8664=False
-bBuildForES31=True
-bSupportsVulkan=False
-bSupportsVulkanSM5=False
-ClangSanitizer=None
-bAndroidOpenGLSupportsBackbufferSampling=False
-bDetectVulkanByDefault=True
-bBuildWithHiddenSymbolVisibility=False
-bSaveSymbols=False
-bForceLDLinker=False
-bEnableGooglePlaySupport=False
-bUseGetAccounts=False
-GamesAppID=
-bEnableSnapshots=False
-bSupportAdMob=True
-AdMobAdUnitID=
-GooglePlayLicenseKey=
-GCMClientSenderID=
-bShowLaunchImage=True
-bAllowIMU=False
-bAllowControllers=True
-bBlockAndroidKeysOnControllers=False
-bControllersBlockDeviceFeedback=False
-AndroidAudio=Default
-AudioSampleRate=44100
-AudioCallbackBufferFrameSize=1024
-AudioNumBuffersToEnqueue=4
-AudioMaxChannels=0
-AudioNumSourceWorkers=0
-SpatializationPlugin=
-ReverbPlugin=
-OcclusionPlugin=
-CompressionOverrides=(bOverrideCompressionTimes=False,DurationThreshold=5.000000,MaxNumRandomBranches=0,SoundCueQualityIndex=0)
-bUseAudioStreamCaching=False
-CacheSizeKB=0
-MaxChunkSizeOverrideKB=0
-bResampleForDevice=False
-SoundCueCookQualityIndex=-1
-MaxSampleRate=0.000000
-HighSampleRate=0.000000
-MedSampleRate=0.000000
-LowSampleRate=0.000000
-MinSampleRate=0.000000
-CompressionQualityModifier=0.000000
-AutoStreamingThreshold=0.000000
-AndroidGraphicsDebugger=None
-MaliGraphicsDebuggerPath=(Path="")
-bEnableMaliPerfCounters=False
-bMultiTargetFormat_ETC2=True
-bMultiTargetFormat_DXT=True
-bMultiTargetFormat_ASTC=True
-TextureFormatPriority_ETC2=0.200000
-TextureFormatPriority_DXT=0.600000
-TextureFormatPriority_ASTC=0.900000
-SDKAPILevelOverride=
-NDKAPILevelOverride=
-bStreamLandscapeMeshLODs=False
-bEnableDomStorage=False
-
-[/Script/IOSRuntimeSettings.IOSRuntimeSettings]
-BundleDisplayName=SentryDemo
-BundleIdentifier=io.sentry.unreal.sample
-bAutomaticSigning=True
-IOSTeamID=
-BundleName=SentryDemo
-bSupportsPortraitOrientation=True
-bSupportsLandscapeLeftOrientation=False
-bSupportsLandscapeRightOrientation=False
-bGeneratedSYMFile=True
-bGeneratedSYMBundle=True
-
-[/Script/Sentry.SentrySettings]
-DsnUrl="https://93c7a68867db43539980de54f09b139a@o447951.ingest.sentry.io/6253052"
-InitAutomatically=False
-AutomaticBreadcrumbs=(bOnMapLoadingStarted=True,bOnMapLoaded=True,bOnGameStateClassChanged=True,bOnGameSessionIDChanged=True,bOnUserActivityStringChanged=True)
-UploadSymbolsAutomatically=False
-PropertiesFilePath=Config/sentry.properties
-CrashReporterUrl="https://o447951.ingest.sentry.io/api/6253052/unreal/93c7a68867db43539980de54f09b139a/"
-
-[/Script/MacTargetPlatform.MacTargetSettings]
-SpatializationPlugin=Built-in Spatialization
-ReverbPlugin=Built-in Reverb
-OcclusionPlugin=Built-in Occlusion
-SoundCueCookQualityIndex=0
-AudioSampleRate=16000
-
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=B5ECF6D4974909F71C02DA844D209403
+SecurityToken=D2BF1BA44B70BEA7812F8EBDAC3C0432
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
@@ -288,3 +179,29 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+PackageName=io.sentry.unreal.sample
+MinSDKVersion=23
+Orientation=Portrait
+bPackageDataInsideApk=True
+KeyStore=debug.keystore
+KeyAlias=androiddebugkey
+KeyStorePassword=android
+KeyPassword=android
+
+[/Script/IOSRuntimeSettings.IOSRuntimeSettings]
+BundleIdentifier=io.sentry.unreal.sample
+BundleDisplayName=SentryDemo
+BundleName=SentryDemo
+bSupportsPortraitOrientation=True
+bSupportsLandscapeLeftOrientation=False
+bSupportsLandscapeRightOrientation=False
+bShipForBitcode=False
+bGeneratedSYMFile=True
+bGeneratedSYMBundle=True
+
+[/Script/Sentry.SentrySettings]
+DsnUrl="https://93c7a68867db43539980de54f09b139a@o447951.ingest.sentry.io/6253052"
+CrashReporterUrl="https://o447951.ingest.sentry.io/api/6253052/unreal/93c7a68867db43539980de54f09b139a/"
+
